--- a/netlify.toml
+++ b/netlify.toml
@@ -1,64 +1,45 @@
 [build]
+  command = "echo 'ReservasPro build complete'"
   publish = "."
-  command = "echo 'Stack Tower Neon build complete'"
 
-# Basic headers for security and caching
+[build.environment]
+  NODE_VERSION = "18"
+
 [[headers]]
   for = "/*"
   [headers.values]
-    X-Frame-Options = "SAMEORIGIN"
-    X-Content-Type-Options = "nosniff"
+    X-Frame-Options = "DENY"
     X-XSS-Protection = "1; mode=block"
+    X-Content-Type-Options = "nosniff"
     Referrer-Policy = "strict-origin-when-cross-origin"
-    Cache-Control = "public, max-age=86400"
+    Permissions-Policy = "camera=(), microphone=(), geolocation=()"
 
 [[headers]]
-  for = "*.js"
+  for = "/sw.js"
   [headers.values]
-    Cache-Control = "public, max-age=31536000, immutable"
+    Cache-Control = "no-cache"
 
 [[headers]]
-  for = "*.css"
+  for = "/*.js"
   [headers.values]
-    Cache-Control = "public, max-age=31536000, immutable"
+    Cache-Control = "public, max-age=604800"
 
 [[headers]]
-  for = "*.html"
+  for = "/*.css"
   [headers.values]
-    Cache-Control = "public, max-age=3600"
+    Cache-Control = "public, max-age=604800"
 
-# Simple SPA routing
+[[redirects]]
+  from = "/admin"
+  to = "/dashboard/"
+  status = 301
+
+[[redirects]]
+  from = "/login"
+  to = "/"
+  status = 200
+
 [[redirects]]
   from = "/*"
   to = "/index.html"
   status = 200
-
-# Force HTTPS
-[[redirects]]
-  from = "http://stack-tower-neon2.netlify.app/*"
-  to = "https://stack-tower-neon2.netlify.app/:splat"
-  status = 301
-  force = true
-
-# Basic environment
-[build.environment]
-  NODE_VERSION = "18"
-
-# Performance optimizations (simplified)
-[build.processing]
-  skip_processing = false
-
-[build.processing.css]
-  bundle = true
-  minify = true
-
-[build.processing.js]
-  bundle = false
-  minify = true
-
-[build.processing.html]
-  pretty_urls = true
-
-# Production context
-[context.production.environment]
-  NODE_ENV = "production"
